# perudata

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: probe_new_year.py
.github/workflows/: watch-new-year.yml
docs/source/: ENAHO_2004_Diccionario.txt  ENAHO_2006_Diccionario.txt  ENAHO_2014_Diccionario.txt  ENAHO_2015_Diccionario.txt  ENAHO_2016_Diccionario.txt  ENAHO_2017_Diccionario.txt  ENAHO_2018_Diccionario.txt  ENAHO_2019_Diccionario.txt  ENAHO_2021_Diccionario.txt  ENAHO_2022_Diccionario.txt  (+1 more)
examples/: poverty_replication.py
scripts/: assess_battery_coherence.py  audit_carryforward_claims.py  audit_enaho_harmonization.py  build_eea_claves.py  build_endes_labels.py  build_epen_labels.py  canonicalize_cosmetic_labels.py  carryforward_contradictions.csv  check_m05_families.py  check_ocu500.py  check_p1138_and_panel.py  check_p1142.py  check_p114x_block.py  check_p203b_evidence.py  check_p311a.py  check_p5563d.py  check_residue_families.py  collision_repairs.csv  complete_battery_code0.py  contaminated_labels.csv  declined_codes.csv  disagreements_01.csv  disagreements_02.csv  disagreements_04.csv  disagreements_05.csv  disagreements_08.csv  disagreements_34.csv  dta_mismatches.csv  enaho_harmonization_scoreboard.csv  extract_inzip_dictionaries.py  extract_module01_overrides.py  fetch_dictionaries.py  fix_carryforward_contradictions.py  fix_modules_01_02_04.py  fix_numeric_modules.py  fix_p314b1_shift.py  fix_pase_not_marked.py  fix_social_gov_batteries.py  inspect_module02_remaining.py  investigate_last14.py  (+30 more)
tests/: test_offline.py
(+81 files in other folders)
